# alewrap

./: CMakeLists.txt  README.md  alewrap-0-0.rockspec
alewrap/: AleEnv.lua  AtariLayer.lua  CMakeLists.txt  GameEnvironment.lua  aleffi.lua  alewrap.cc  alewrap.h  alewrap.inl
util/: record_frames.lua
util/alewrap/: GameScreen.lua  init.lua
